启动脚本加垃圾回收日志的详情和回收持续时间